# cpp-homeworks

./: README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  README.md  build.sh  install.sh
